--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,6 +4,8 @@ platform :ios, '10.0'
 
 target 'XDUIExtension_Example' do
   pod 'XDUIExtension', :path => '../'
+#  pod 'XDUIExtension', :git => 'https://github.com/SinceValentine/XDUIExtension.git', :tag => '0.1.0'
+
 
   target 'XDUIExtension_Tests' do
     inherit! :search_paths
